[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/nodes/RulesetManager.gd" type="Script" id=1]
[ext_resource path="res://assets/styles/header_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/styles/ui_theme.tres" type="Theme" id=3]

[node name="RulesetManager" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="Label" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
custom_fonts/font = ExtResource( 2 )
text = "Rulesets in the project folder"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 656.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuiltInRulesets" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 638.0
margin_bottom = 616.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/BuiltInRulesets"]
margin_right = 638.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
text = "Built-in rulesets"
align = 1
valign = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/BuiltInRulesets"]
margin_top = 28.0
margin_right = 638.0
margin_bottom = 616.0
size_flags_vertical = 3
custom_constants/margin_right = 6
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 48

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/BuiltInRulesets/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 632.0
margin_bottom = 540.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/BuiltInRulesets/MarginContainer/PanelContainer"]
margin_right = 620.0
margin_bottom = 528.0

[node name="BuiltInList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/BuiltInRulesets/MarginContainer/PanelContainer/ScrollContainer"]
margin_right = 620.0
margin_bottom = 66.0
size_flags_horizontal = 3

[node name="CheckBox2" type="CheckBox" parent="VBoxContainer/HBoxContainer/BuiltInRulesets/MarginContainer/PanelContainer/ScrollContainer/BuiltInList"]
margin_right = 620.0
margin_bottom = 31.0
text = "option 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer/BuiltInRulesets/MarginContainer/PanelContainer/ScrollContainer/BuiltInList"]
margin_top = 35.0
margin_right = 620.0
margin_bottom = 66.0
pressed = true
text = "option 2"

[node name="CustomRulesets" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/CustomRulesets"]
margin_right = 638.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
text = "Custom rulesets"
align = 1
valign = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/CustomRulesets"]
margin_top = 28.0
margin_right = 638.0
margin_bottom = 576.0
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 6
custom_constants/margin_bottom = 12

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/CustomRulesets/MarginContainer"]
margin_left = 6.0
margin_top = 12.0
margin_right = 626.0
margin_bottom = 536.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/CustomRulesets/MarginContainer/PanelContainer"]
margin_right = 620.0
margin_bottom = 524.0

[node name="CustomList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/CustomRulesets/MarginContainer/PanelContainer/ScrollContainer"]
margin_right = 620.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/CustomRulesets"]
margin_top = 580.0
margin_right = 638.0
margin_bottom = 616.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/CustomRulesets/CenterContainer"]
margin_left = 265.0
margin_right = 373.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 36 )
text = "Load another"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 660.0
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1268.0
margin_bottom = 48.0
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/ButtonContainer"]
margin_left = 1136.0
margin_right = 1256.0
margin_bottom = 36.0
rect_min_size = Vector2( 120, 36 )
text = "Close"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 363.0
margin_bottom = 186.0

[connection signal="about_to_show" from="." to="." method="_on_RulesetDialog_about_to_show"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ButtonContainer/Button" to="." method="_on_Button_pressed"]
